test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/scalar_expressions/void_ternary_condition.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  void
  identifier(f)
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(f)
  (
  )
  ?
  const int(1)
  :
  const int(2)
  ;
  }
